wip: Fix float flag annotation
Also optimizes generated qemu code size